--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -30,11 +30,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Machine Learning Project\n",
+        "# **Machine Learning Project**\n",
         "\n",
-        "Crime Rate Detection and Analysis\n",
+        "# **Crime Rate Detection and Analysis**\n",
         "\n",
-        "\n"
+        "Contributors- Anushka Mazumdar, Sanjay S, Swetha S"
       ],
       "metadata": {
         "id": "uLltMdJPmI02"
@@ -43,7 +43,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Importing Necessary Libraries"
+        "# **Importing Necessary Libraries**"
       ],
       "metadata": {
         "id": "oK4FSgb7mIEV"
@@ -827,6 +827,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, there are no missing values and data can be used for analysis"
+      ],
+      "metadata": {
+        "id": "TYiPObfiorDI"
+      }
     },
     {
       "cell_type": "markdown",
